tf-aws-infra-main/db_security.tf
resource "aws_security_group" "rds_sg" {
  name        = "db_security_group"
  description = "Allow MySQL access from theius application security group"
  vpc_id      = aws_vpc.csye6225_vpc.id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.app_security_group.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "DBSecurityGroup"
  }
}
